--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
     "react": "^16.4.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-fontawesome": "^1.6.1",
-    "react-router-dom": "^4.2.2",
-    "sort-by": "^1.2.0"
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
